--- a/Sunduk.PWA/Components/TimeCalc/TurningTimeComponent.razor
+++ b/Sunduk.PWA/Components/TimeCalc/TurningTimeComponent.razor
@@ -318,7 +318,7 @@
 </MudContainer>
 
 @code {
-    public Variant ButtonsVariant => Variant.Filled;
+    public Variant ButtonsVariant => Variant.Text;
     public bool FirstFieldsUnderline => false;
     public int ButtonSize => 35;
 
